# Phishing-Mail-Detection-With-CNNs

./: .gitignore  README.md  THEORY.md  pyproject.toml  pyrightconfig.json
analytics/pictures/mermaid-diagrams/code/: classification.mmdc  cleansing.mmdc  cnn.mmdc  vocabulary.mmdc  zipf.mmdc
analytics/results/: vocabulary.json
analytics/results/metrics/: cnn_dqa.csv  naive_bayes.csv  random_forest.csv
src/: evaluate_models.py  main.py  preprocessing.py
src/model/: cnn_dqa_classifier.py  naive_bayes_baseline.py  random_forest_classifier.py
src/utils/: build_vocabulary.py  tokenizer.py  zipf_weightage.py
