[tool.poetry]
name = "phishing-mail-detection-with-cnns"
version = "0.1.0"
description = "Capstone project adapting Zhu et al.'s CNN approach for phishing emails instead of URLs"
authors = [
    "V Sai Sasank <imsasankvindamuri@gmail.com>"
]
readme = "README.md"
packages = [
    {include = "src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
tensorflow = "^2.20.0"
keras = "^3.13.1"
scikit-learn = "^1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
phishing-detection = "src.main:main"
